--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Lato', sans-serif;
+}
 .page {
   display: flex;
   flex-wrap: wrap;
+  color: white;
 }
 
 .section {
